# ptah

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  conda.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  readthedocs.yml
docs/: faq.md  index.md
docs/explanation/: clis.md  concepts.md  faq.md
docs/guides/: install.md
docs/reference/: cli.md  config.md  dependencies.md  project.md
docs/tutorials/: first-project.md  start.md
examples/db/: README.md  kind.yml
examples/db/api/: Dockerfile  main.py  requirements.txt
examples/db/infra/: api.yaml  mysql.yaml
examples/fastapi/: helmfile.yaml  ptah.yml
examples/fastapi/fastapi/: .dockerignore  Dockerfile  README.md  main.py
examples/fastapi/k8s/: fastapi.yaml
examples/minimal/: helmfile.yaml
examples/minimal/k8s/: admin.yaml
ptah/cli/: __init__.py
ptah/clients/: __init__.py  _injector.py  dashboard.py  docker.py  filesystem.py  helmfile.py  jsonpath.py  kind.py  ksync.py  kubernetes.py  panic.py  shell.py  sync.py  yaml.py
ptah/clients/process/: __init__.py
ptah/models/: docker.py  project.py
ptah/operations/: sync.py
tests/: conftest.py
tests/cli/: test_cli.py  test_cli_end_to_end.py  test_cli_project.py
tests/clients/: deployments.json  test_caching.py  test_dashboard.py  test_docker.py  test_filesystem.py  test_forward.py  test_helmfile.py  test_kind.py  test_kubernetes.py  test_process.py  test_project.py  test_shell.py  test_ssh.py  test_version.py  test_yaml.py
tests/operations/: pods.json  test_sync.py
tests/projects/httpbin/: ptah.yml
tests/projects/project-with-fastapi/: k8s.yaml  ptah.yml
tests/projects/project-with-fastapi/fastapi/: Dockerfile  main.py
tests/projects/project-with-kind-config/: kind.yml
tests/test-project/: httpbin.yaml  ptah.yml
