[project]
name = "ptah-cli"
readme = "README.md"
version = "0.0.3"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "injector>=0.21.0",
    "omegaconf>=2.3.0",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "build==1.2.2.post1",
    "isort==5.13.2",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "ruff==0.7.2",
]
doc = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.43",
]

[project.scripts]
ptah = "ptah.cli:app"

[tool.isort]
known_local_folder = ["ptah"]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=ptah --junitxml=coverage.xml"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.setuptools.package-data]
ptah = ["**/*.py"]
