[project]
name = "ptah-cli"
readme = "README.md"
version = "0.5.1"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "cachelib>=0.13.0",
    "dirhash>=0.5.0",
    "dockerfile-parse>=2.0.1",
    "inflect>=7.4.0",
    "injector>=0.21.0",
    "jsonpath-ng>=1.7.0",
    "omegaconf>=2.3.0",
    "pathspec>=0.12.1",
    "psutil>=6.1.0",
    "pyperclip>=1.9.0",
    "typer>=0.12.3",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "build==1.2.2.post1",
    "isort==5.13.2",
    "pre-commit==4.0.1",
    "pyright==1.1.391",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
]
doc = [
    "mkdocs==1.6.1",
    "mkdocs-click==0.8.1",
    "mkdocs-material==9.5.49",
]

[project.scripts]
ptah = "ptah.cli:app"

[tool.isort]
known_local_folder = ["ptah"]
profile = "black"

# https://microsoft.github.io/pyright/#/configuration
[tool.pyright]
exclude=["examples"]

[tool.pytest.ini_options]
addopts = "--cov=ptah --junitxml=coverage.xml"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.setuptools.package-data]
ptah = ["**/*.py"]
