[project]
name = "ptah-cli"
readme = "README.md"
version = "0.7.2"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "cachelib>=0.13.0",
    "dirhash>=0.5.0",
    "dockerfile-parse>=2.0.1",
    "inflect>=7.4.0",
    "injector>=0.21.0",
    "jsonpath-ng>=1.7.0",
    "omegaconf>=2.3.0",
    "pathspec>=0.12.1",
    "psutil>=6.1.0",
    "pyperclip>=1.9.0",
    "typer>=0.12.3",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "build==1.2.2.post1",
    "httpx==0.28.1",
    "isort==6.0.1",
    "pre-commit==4.2.0",
    "pyright==1.1.401",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-timeout==2.4.0",
    "ruff==0.11.12",
]
doc = [
    "mkdocs==1.6.1",
    "mkdocs-click==0.9.0",
    "mkdocs-material==9.6.14",
]

[project.scripts]
ptah = "ptah.cli:app"

[tool.isort]
known_local_folder = ["ptah"]
profile = "black"

# https://microsoft.github.io/pyright/#/configuration
[tool.pyright]
exclude=[
    "examples",
    "tests/projects",
]

[tool.pytest.ini_options]
# https://stackoverflow.com/a/68590025
addopts = "-m 'not e2e' --cov=ptah --junitxml=coverage.xml"
# https://stackoverflow.com/a/59383021
filterwarnings = [
    "error",
]
# https://stackoverflow.com/a/60813297
markers = [
    "e2e: marks tests as end-to-end (these will be skipped by default)",
]
timeout = 180

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.setuptools.package-data]
ptah = ["**/*.py"]
